# hsnippet

./: .gitignore  .gitmodules  Makefile  README.md  build.sh  buildBackend.sh  buildFrontend.sh  default.nix  init-sandbox.sh
app/: build-snippet.sh  devel.cfg.template  hsnippet-lib  snippets
app/sandbox/: build-snippet.sh  common.nix  default.nix  template.hs
app/snaplets/heist/: _login.tpl  _new_user.tpl  base.tpl  index.tpl  mockup.tpl  userform.tpl
app/static/: app.css  app.js  custom.css  hsnippet.js  lib.js  rts.js
backend/: default.nix  hsnippet.cabal  packages.nix
backend/src/: Builder.hs  GroundhogAuth.hs  Main.hs  Site.hs
backend/src/HSnippet/: BuildSnippet.hs  BuildTypes.hs  Reload.hs  Site.hs  Websocket.hs
backend/src/HSnippet/Types/: App.hs
deploy/: amazon-base-config.nix  configuration.nix  deploy  setup-env.sh  setup-mac.sh
examples/: EditInPlace.snippet  FrontendAll.snippet  Twitter.snippet
frontend/: build.sh  cache.nix  common.nix  hsnippet-frontend.cabal  native.nix  overrides.nix  packages.nix  update.sh
frontend/src/: ACE.hs  HSnippet.hs  Main.hs  SemanticUI.hs
frontend/src/HSnippet/: DBLayer.hs  FrontendState.hs  Imports.hs  Lib.hs  SnippetInput.hs  Tabs.hs  XmlHttpRequest.hs
hsnippet-lib/: README.md  default.nix  hsnippet-lib.cabal
hsnippet-lib/src/HSnippet/: Lib.hs
sandbox/: build-snippet.sh  common.nix  default.nix  packages.nix  template.html
shared/src/HSnippet/Shared/: Common.hs  OutputParser.hs  WsApi.hs
shared/src/HSnippet/Shared/Types/: BuildMessage.hs  BuildResults.hs  ExampleSnippet.hs  Package.hs  Snippet.hs  SnippetContents.hs  SnippetImport.hs
static/js/: jquery.min.js  semantic.min.js
userbuild/: common.nix  default.nix  hsnippet-builder.cabal  packages.nix  template.hs  template.html
userbuild/examples/: FrontendAll.snippet  Hilbert.snippet
userbuild/src/: DummyMain.hs
