name:                hsnippet
version:             0.1
synopsis:            Haskell code snippet app
description:         Share small bits of code
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley, Greg Hale
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable main
  hs-source-dirs: src src-shared
  main-is: Main.hs
  build-depends:
    aeson,
    bytestring,
    containers,
    errors             >= 2.0 && < 2.1,
    heist              >= 1.0 && < 1.1,
    lens,
    mtl,
    random,
    readable,
    rng-utils,
    snap               >= 1.0 && < 1.1,
    snap-core          >= 1.0 && < 1.1,
    snap-loader-static >= 1.0 && < 1.1,
    snap-server        >= 1.0 && < 1.1,
    string-conv,
    text,
    transformers
    -- websockets,
    -- websockets-snap >= 1.0.0.0 && < 1.1
  if impl(ghc >= 7.8)
    build-depends: base >= 4.7 && < 5
  else
    build-depends: base >=4.6 && <4.7
  ghc-options: -Wall
  default-language:    Haskell2010

