name:                hsnippet
version:             0.1
synopsis:            Haskell code snippet app
description:         Share small bits of code
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley, Greg Hale
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable main
  hs-source-dirs: src src-shared
  main-is: Main.hs
  build-depends:
    SHA                       >= 1.6  && < 1.7,
    aeson                     >= 0.9  && < 0.10,
    bytestring,
    clientsession             >= 0.9  && < 0.10,
    configurator              >= 0.3  && < 0.4,
    containers,
    directory                 >= 1.2  && < 1.3,
    errors                    >= 2.0  && < 2.2,
    filepath                  >= 1.3  && < 1.5,
    fsnotify                  >= 0.2  && < 0.3,
    groundhog                 >= 0.7  && < 0.8,
    groundhog-th              >= 0.7  && < 0.8,
    groundhog-postgresql      >= 0.7  && < 0.8,
    heist                     >= 1.0  && < 1.1,
    lens,
    monad-control             >= 1.0  && < 1.1,
    monad-logger              >= 0.3  && < 0.4,
    mtl,
    postgresql-simple         >= 0.3  && < 0.6,
    process                   >= 1.2.3.0 && < 1.4,
    pwstore-fast,
    random,
    readable,
    resource-pool             >= 0.2  && < 0.3,
    rng-utils,
    snap                      >= 1.0  && < 1.1,
    snap-core                 >= 1.0  && < 1.1,
    snap-loader-static        >= 1.0  && < 1.1,
    snap-server               >= 1.0  && < 1.1,
    snaplet-postgresql-simple >= 1.0  && < 1.1,
    string-conv,
    text,
    time                      >= 1.4  && < 1.6,
    transformers
    -- websockets,
    -- websockets-snap >= 1.0.0.0 && < 1.1
  if impl(ghc >= 7.8)
    build-depends: base >= 4.7 && < 5
  else
    build-depends: base >=4.6 && <4.7
  ghc-options: -Wall
  default-language:    Haskell2010

executable build-snippet
  hs-source-dirs: src src-shared
  main-is: Builder.hs
  build-depends:
    SHA                       >= 1.6  && < 1.7,
    bytestring,
    containers,
    directory                 >= 1.2  && < 1.3,
    errors                    >= 2.0  && < 2.2,
    filepath                  >= 1.3  && < 1.5,
    monad-logger              >= 0.3  && < 0.4,
    mtl,
    process                   >= 1.2.3.0 && < 1.4,
    random,
    readable,
    resource-pool             >= 0.2  && < 0.3,
    rng-utils,
    string-conv,
    text,
    time                      >= 1.4  && < 1.6,
    transformers
  if impl(ghc >= 7.8)
    build-depends: base >= 4.7 && < 5
  else
    build-depends: base >=4.6 && <4.7
  ghc-options: -Wall
  default-language:    Haskell2010

