name:                hsnippet-frontend
version:             0.1
license:             BSD3
author:              Doug Beardsley, Greg Hale
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hsnippet-frontend
  hs-source-dirs: src, src-shared
  main-is:
    Main.hs

  build-depends:
      aeson
    , attoparsec
    , base
    , base64-bytestring
    , bifunctors
    , bytestring
    , cereal
    , comonad
    , containers
    , data-default
    , dependent-map
    , dependent-sum
    , errors
    , formattable
    , generic-deriving
    , ghcjs-dom
    , hashable
    , http-types
    , lens
    , monad-loops
    , mtl
    , readable
    , reflex
    , reflex-dom
    , reflex-dom-contrib
    , safe
    , safecopy
    , scientific
    , semigroups
    , split
    , string-conv
    , text
    , these
    , time
    , transformers
    , unordered-containers
    , vector

  if impl(ghcjs)
    build-depends: ghcjs-base

  ghc-options: -O2 -Wall -fno-warn-unused-do-bind -fno-warn-orphans
  cpp-options: -D_GHCJS_ -DGHCJS_GC_INTERVAL=60000 -D__GHCJS__

  default-language:    Haskell2010

