name:                hsnippet-lib
version:             0.1
synopsis:            A small library of functions for snippets
license:             BSD3
license-file:        LICENSE
author:              Doug Beardsley
maintainer:          mightybyte@gmail.com
copyright:           Doug Beardley
category:            FRP
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs: src

  exposed-modules:     
    HSnippet.Lib

  build-depends:
    aeson              >= 0.8  && < 0.10,
    base               >= 4.6  && < 4.9,
    bifunctors         >= 4.0  && < 5.3,
    bytestring         >= 0.10 && < 0.11,
    containers         >= 0.5  && < 0.6,
    data-default       >= 0.5  && < 0.6,
    ghcjs-dom          >= 0.2  && < 0.3,
    http-types         >= 0.8  && < 0.10,
    lens               >= 4.9  && < 4.14,
    mtl                >= 2.0  && < 2.3,
    readable           >= 0.3  && < 0.4,
    reflex             >= 0.2  && < 0.5,
    reflex-dom         >= 0.1  && < 0.4,
    reflex-dom-contrib >= 0.1  && < 0.5,
    safe               >= 0.3  && < 0.4,
    string-conv        >= 0.1  && < 0.2,
    text               >= 1.2  && < 1.3,
    time               >= 1.5  && < 1.6,
    transformers       >= 0.4  && < 0.5

  if impl(ghcjs)
    build-depends:
      ghcjs-base   >= 0.2  && < 0.3

  default-language:    Haskell2010

  ghc-options: -Wall -fwarn-tabs
