name:                hsnippet-frontend
version:             0.1
license:             BSD3
author:              Doug Beardsley, Greg Hale
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hsnippet-frontend
  hs-source-dirs: src
  main-is: DummyMain.hs

  build-depends:
      aeson
    , attoparsec
    , base
    , bifunctors
    , bytestring
    , cereal
    , colour
    , comonad
    , containers
    , data-default
    , dependent-map
    , dependent-sum
    , diagrams-lib
    , diagrams-reflex
    , errors
    , generic-deriving
    , ghcjs-dom
    , hashable
    , hsnippet-lib
    , http-types
    , lens
    , linear
    , monad-loops
    , mtl
    , palette
    , readable
    , reflex
    , reflex-dom
    , reflex-dom-contrib
    , safe
    , safecopy
    , scientific
    , semigroups
    , split
    , string-conv
    , text
    , these
    , time
    , transformers
    , unordered-containers
    , vector

  if impl(ghcjs)
    build-depends: ghcjs-base

  ghc-options: -O2 -Wall -fno-warn-unused-do-bind -fno-warn-orphans
  cpp-options: -D_GHCJS_ -DGHCJS_GC_INTERVAL=60000 -D__GHCJS__

  default-language:    Haskell2010

